// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout displays title and page 1`] = `
<getContext(getContext(getContext(withState(StatelessLayout))))
  footerMessage={
    <p>
      Brought to you with ❤ by 
      <a
        href="/about"
      >
        Nick Redmark
      </a>
      . Support this platform on 
      <a
        href="https://www.patreon.com/nickredmark"
        target="_blank"
      >
        Patreon
      </a>
      .
    </p>
  }
  menu={
    Array [
      Object {
        "label": "Home",
        "name": "home",
        "url": "/",
      },
      Object {
        "label": "About",
        "name": "about",
        "url": "/about",
      },
      Object {
        "label": "News",
        "name": "news",
        "url": "/news",
      },
      Object {
        "label": "Sorters",
        "name": "users",
        "url": "/users",
      },
      Object {
        "label": "Dashboard",
        "name": "dashboard",
        "url": "/account",
      },
    ]
  }
  page="home"
  siteName="Sorters Club"
  title="Sorters Club - Sort yourself out!"
  userMenu={
    Array [
      Object {
        "label": "👤 Profile",
        "name": "profile",
        "url": "/account/profile",
      },
      Object {
        "label": "◎ Goals",
        "name": "goals",
        "url": "/account/goals",
      },
      Object {
        "label": "✎ Journal",
        "name": "journal",
        "url": "/account/journal",
      },
      Object {
        "label": "💡 Topics",
        "name": "topics",
        "url": "/account/topics",
      },
      Object {
        "label": "✎ Essays",
        "name": "essays",
        "url": "/account/essays",
      },
      Object {
        "label": "👄 Speeches",
        "name": "speeches",
        "url": "/account/speeches",
      },
      Object {
        "label": "🗩 Conversations",
        "name": "conversations",
        "url": "/account/conversations",
      },
      Object {
        "label": "📖 Reading List",
        "name": "reads",
        "url": "/account/reads",
      },
      Object {
        "label": "⚙ Account",
        "name": "account",
        "url": "/account/account",
      },
      Object {
        "label": "Log out",
        "name": "logout",
        "url": "/logout",
      },
    ]
  }
/>
`;

exports[`layout shallow-renders 1`] = `
<getContext(getContext(getContext(withState(StatelessLayout))))
  footerMessage={
    <p>
      Brought to you with ❤ by 
      <a
        href="/about"
      >
        Nick Redmark
      </a>
      . Support this platform on 
      <a
        href="https://www.patreon.com/nickredmark"
        target="_blank"
      >
        Patreon
      </a>
      .
    </p>
  }
  menu={
    Array [
      Object {
        "label": "Home",
        "name": "home",
        "url": "/",
      },
      Object {
        "label": "About",
        "name": "about",
        "url": "/about",
      },
      Object {
        "label": "News",
        "name": "news",
        "url": "/news",
      },
      Object {
        "label": "Sorters",
        "name": "users",
        "url": "/users",
      },
      Object {
        "label": "Dashboard",
        "name": "dashboard",
        "url": "/account",
      },
    ]
  }
  siteName="Sorters Club"
  userMenu={
    Array [
      Object {
        "label": "👤 Profile",
        "name": "profile",
        "url": "/account/profile",
      },
      Object {
        "label": "◎ Goals",
        "name": "goals",
        "url": "/account/goals",
      },
      Object {
        "label": "✎ Journal",
        "name": "journal",
        "url": "/account/journal",
      },
      Object {
        "label": "💡 Topics",
        "name": "topics",
        "url": "/account/topics",
      },
      Object {
        "label": "✎ Essays",
        "name": "essays",
        "url": "/account/essays",
      },
      Object {
        "label": "👄 Speeches",
        "name": "speeches",
        "url": "/account/speeches",
      },
      Object {
        "label": "🗩 Conversations",
        "name": "conversations",
        "url": "/account/conversations",
      },
      Object {
        "label": "📖 Reading List",
        "name": "reads",
        "url": "/account/reads",
      },
      Object {
        "label": "⚙ Account",
        "name": "account",
        "url": "/account/account",
      },
      Object {
        "label": "Log out",
        "name": "logout",
        "url": "/logout",
      },
    ]
  }
/>
`;
